# LLaVA

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
llava/: conversation.py
llava/eval/: model_vqa.py  model_vqa_loader.py  model_vqa_science.py  run_llava.py
llava/model/: builder.py
llava/model/language_model/: llava_llama.py  llava_phi3.py
llava/serve/: cli.py  gradio_web_server.py
llava/train/: train.py
scripts/abci/batch_job/: finetune_7B.sh  finetune_7B_lora.sh  finetune_phi3.sh  finetune_phi3_lora.sh  pretrain_7B.sh  pretrain_phi3.sh
scripts/abci/env/: convert_docker2singularity.sh  create_docker_image.sh
scripts/my_eval/: gqa.sh  llavabench.sh  mme.sh  mmvet.sh  pope.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
scripts/v1_5/: finetune_phi3.sh  finetune_phi3_lora.sh  finetune_tiny.sh  pretrain_phi3.sh  pretrain_phi_tiny.sh  pretrain_tiny.sh
scripts/v1_5/eval/: gqa_7b_lora.sh  gqa_7b_pretrained.sh  pope_7b_lora.sh  pope_7b_pretrained.sh
